# VerySmartPointer

./: CMakeLists.txt  README.md
Include/: SmartPtr.hpp
